--- a/public/Portfolio.html
+++ b/public/Portfolio.html
@@ -6,10 +6,11 @@
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
-    <link href="../Site/Images/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="../Site/public/Images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
@@ -18,8 +19,8 @@
 		<h1>Alvaro de Castro<span class="color">.</span></h1>
 		<nav>
 			<ul>
-				<li><a href="../Site/Index.html">Home</a></li>
-				<li><a href="../Site/Portfolio.html">Portfolio</a></li>
+				<li><a href="../public/Index.html">Home</a></li>
+				<li><a href="../public/Portfolio.html">Portfolio</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -29,7 +30,7 @@
 	<div class="wrapper">
     <h2><strong>Ever seen<br/>an Octocat?</strong></h2>
     <a href="https://github.com/ospik3o"target="_blank">
-    <img src="../Site/Images/github.png"height="100" width="100">
+    <img src="../public/Images/github.png"height="100" width="100">
 	</div>
 </div>
 
