--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,13 @@
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!-- Compiled and minified CSS -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
-    <link href="../Site/Images/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="../Images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
@@ -18,7 +21,7 @@
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="../Site/Portfolio.html">Portfolio</a></li>
+				<li><a href="../public/Portfolio.html">Portfolio</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -28,7 +31,7 @@
 	<div class="wrapper">
 		<h2><strong>Full Stack</strong><br/>
 		Web Developer.</h2>
-		<a href="../Site/Portfolio.html" class="button-1">See my Work</a>
+		<a href="../public/Portfolio.html" class="button-1">See my Work</a>
 	</div>
 </div>
 
