--- a/public/Portfolio.html
+++ b/public/Portfolio.html
@@ -7,8 +7,8 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/reset.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
     <link href="../Site/public/Images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
@@ -19,7 +19,7 @@
 		<h1>Alvaro de Castro<span class="color">.</span></h1>
 		<nav>
 			<ul>
-				<li><a href="../public/Index.html">Home</a></li>
+				<li><a href="../public/index.html">Home</a></li>
 				<li><a href="../public/Portfolio.html">Portfolio</a></li>
 			</ul>
 		</nav>
