--- a/public/Portfolio.html
+++ b/public/Portfolio.html
@@ -19,8 +19,8 @@
 		<h1>Alvaro de Castro<span class="color">.</span></h1>
 		<nav>
 			<ul>
-				<li><a href="../public/index.html">Home</a></li>
-				<li><a href="../public/Portfolio.html">Portfolio</a></li>
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="../Portfolio.html">Portfolio</a></li>
 			</ul>
 		</nav>
 	</div>
