--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="../public/Portfolio.html">Portfolio</a></li>
+				<li><a href="../Portfolio.html">Portfolio</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -31,7 +31,7 @@
 	<div class="wrapper">
 		<h2><strong>Full Stack</strong><br/>
 		Web Developer.</h2>
-		<a href="../public/Portfolio.html" class="button-1">See my Work</a>
+		<a href="../Portfolio.html" class="button-1">See my Work</a>
 	</div>
 </div>
 
