--- a/public/Portfolio.html
+++ b/public/Portfolio.html
@@ -30,7 +30,7 @@
 	<div class="wrapper">
     <h2><strong>Ever seen<br/>an Octocat?</strong></h2>
     <a href="https://github.com/ospik3o"target="_blank">
-    <img src="../public/Images/github.png"height="100" width="100">
+    <img src="../Images/github.png"height="100" width="100">
 	</div>
 </div>
 
