--- a/public/Portfolio.html
+++ b/public/Portfolio.html
@@ -6,11 +6,11 @@
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="CSS/style.css" media="print">
     <link rel="stylesheet" type="text/css" href="CSS/reset.css">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
-    <link href="../Site/public/Images/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="../favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
